[package]
name = "simple-clock"
version = "0.1.0"
edition = "2018"

authors = ["alekseysidorov"]
license = "MIT OR Apache-2.0"

description = "The simplest clock for the Rust embedded."
documentation = "https://docs.rs/simple-clock/"
repository = "https://github.com/alekseysidorov/simple-clock"
keywords = ["clock", "no_std"]
categories = ["no-std"]

[dependencies]
